--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
