--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.7.2",
     "@toolz/allow": "^1.0.1",
     "@toolz/is-a-regular-object-react": "^1.0.0",
+    "@types/testing-library__react": "^10.2.0",
     "axios": "^1.6.8",
     "history": "^5.3.0",
     "notistack": "^3.0.1",
@@ -21,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,10 +47,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
     "@testing-library/react": "^15.0.7",
     "babel-jest": "^29.7.0",
     "cypress": "^13.7.2",
